--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>BLOW</title>
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
+  <body>
+    <div class="wrap">
+      <!-- боковая панель -->
+      <div class="sidebar">
+        <p class="sidebar__text"> <strong class = sidebar__text-strong> get in touch </strong>have project in mind</p>
+        <img class="sidebar__img" src="img/icon_bag.png" />
+      </div>
+      <!--  -->
+      <div class="content">
+        <header class="main-header">
+          <div class="logo">
+            <a class="logo__text" href="#">blow </a>
+          </div>
+          <nav class="nav-menu">
+            <ul class="main-menu">
+              <li class="main-menu__el">
+                <a href="#" class="main-menu__el-text">home</a>
+              </li>
+              <li class="main-menu__el">
+                <a href="#" class="main-menu__el-text">about</a>
+              </li>
+              <li class="main-menu__el">
+                <a href="#" class="main-menu__el-text">work</a>
+              </li>
+              <li class="main-menu__el">
+                <a href="#" class="main-menu__el-text">contact</a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+        <div class="main-btn">
+          <button class="main-btn__btn">Explore work</button>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
